# aframe

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .test  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  index.yaml  law.cfg  luigi.cfg  pyproject.toml
libs/analysis/: pyproject.toml
libs/analysis/aframe/analysis/: sensitivity.py
libs/analysis/bbhnet/analysis/: __init__.py  analysis.py  distributions.py  integrators.py  matched_filter.py  normalizers.py  sensitivity.py  vt.py
libs/analysis/tests/: conftest.py  test_analysis.py  test_integrators.py  test_normalizers.py  test_sensitive_volume.py  test_vt.py
libs/analysis/tests/distributions/: test_cluster.py  test_discrete.py  test_distribution.py
libs/analysis/tests/ledger/: test_events.py  test_injections.py  test_ledger.py
libs/architectures/: pyproject.toml
libs/architectures/aframe/architectures/: __init__.py  autoencoder.py  preprocessor.py  resnet.py  supervised.py  wrapper.py
libs/architectures/architectures/: __init__.py  autoencoder.py  base.py  concat.py  multimodal.py  multimodal_time_split.py  stackedresnets.py  supervised.py
libs/architectures/architectures/networks/: __init__.py  s4.py  wavenet.py  xylophone.py
libs/architectures/bbhnet/architectures/: __init__.py  preprocessor.py  resnet.py  wrapper.py
libs/architectures/tests/: test_resnet.py  test_supervised.py  test_wrapper.py
libs/architectures/tests/networks/: test_wavenet.py
libs/base/: pyproject.toml
libs/cosmology/: pyproject.toml
libs/data/: pyproject.toml
libs/data/bbhnet/data/: __init__.py  dataloader.py  distributions.py  glitch_sampler.py  utils.py  waveform_injection.py  waveform_sampler.py
libs/data/tests/: conftest.py  test_dataloader.py  test_distributions.py  test_glitch_sampler.py  test_utils.py  test_waveform_injection.py  test_waveform_sampler.py
libs/data/tests/transforms/: conftest.py  (+3 more)
libs/deploy/: pyproject.toml
libs/injection/: injectSignals.py  pyproject.toml
libs/injection/tests/: conftest.py  test_injection.py
libs/io/: pyproject.toml
libs/io/tests/: conftest.py  test_h5.py  test_timeslides.py
libs/ledger/: pyproject.toml
libs/ledger/ledger/: Untitled-1.ipynb  events.py  injections.py  ledger.py
libs/ledger/tests/: conftest.py  test_events.py  test_injections.py  test_ledger.py
libs/logging/: pyproject.toml
libs/logging/aframe/: logging.py
libs/logging/bbhnet/: logging.py
libs/p_astro/: pyproject.toml  test.ipynb
libs/p_astro/p_astro/: __init__.py  background.py  foreground.py  p_astro.py
libs/p_astro/tests/: conftest.py  test_background.py  test_foreground.py  test_p_astro.py
libs/parallelize/: pyproject.toml
libs/parallelize/bbhnet/: parallelize.py
libs/parallelize/tests/: test_parallelize.py
libs/priors/: pyproject.toml
libs/priors/priors/: a3d3.py  priors.py  utils.py
libs/priors/tests/: test_priors.py  test_utils.py
libs/trainer/: pyproject.toml
libs/trainer/tests/: test_trainer.py  test_wrapper.py
libs/utils/: pyproject.toml
libs/utils/tests/: test_common.py  test_cosmology.py  test_data.py  test_logging.py  test_preprocessing.py  test_s3.py  test_timeslides.py
libs/utils/utils/: augmentation.py  common.py  cosmology.py  data.py  logging.py  mm_preprocessing.py  preprocessing.py  s3.py
projects/data/: README.md  apptainer.def  conda-lock.yml  environment.yaml  pyproject.toml
projects/data/data/: __main__.py  authenticate.py  cli.py  find.py  injection.py
projects/export/: README.md  apptainer.def  config.yaml  export.yaml  export_bns.yaml  export_heterodyne.yaml  pyproject.toml
projects/export/export/: __main__.py  cli.py  main.py  mm_main.py  mm_modules.py  mm_snapshotter.py  remote.py  snapshotter.py
projects/export/tests/: test_export.py
projects/generate_glitches/: environment.yaml  generate_glitches.py  pyproject.toml
projects/generate_glitches/tests/: test_generate_glitches.py  test_veto.py
projects/generate_waveforms/: generate_waveforms.py  pyproject.toml
projects/generate_waveforms/generate_waveforms/: simulate.py
projects/generate_waveforms/priors/: nonspin_BBH.prior
projects/generate_waveforms/tests/: test_generate_waveforms.py
projects/infer/: README.md  apptainer.def  infer.def  pyproject.toml  test.h5
projects/infer/infer/: cli.py  data.py  deploy.py  main.py  postprocess.py  server.py  utils.py
projects/infer/tests/: test_postprocess.py
projects/o2-timeslide-analysis/: analyze_o2.py  overview.ipynb  pyproject.toml
projects/o2-timeslide-analysis/analyze_o2/: analysis.py  utils.py
projects/online/: README.md  apptainer.def  conda-lock.yml  config.yaml  crontab  environment.yaml  monitor.sh  prior.yaml  pyproject.toml  run.sh
projects/online/online/: buffer.py  cli.py  gdb.py  main.py  make_event_pages.py  pe.py  searcher.py  snapshotter.py
projects/online_deployment/: conda-lock.yml  environment.yaml  pyproject.toml
projects/online_deployment/online_deployment/: buffer.py  dataloading.py  main.py  parameter_estimation.py  snapshot_whitener.py  trigger.py
projects/plots/: README.md  Untitled-1.ipynb  apptainer.def  config.yaml  pyproject.toml  run.sh
projects/plots/plots/: app.py  cli.py  data.py  gwtc3.py  main.py  omega_scan.py  p_astro.py
projects/projects/utils/: pyproject.toml
projects/sandbox/analyze/: analyze.py  pyproject.toml  utils.py
projects/sandbox/datagen/: environment.yaml  pyproject.toml
projects/sandbox/export/: export.py  pyproject.toml
projects/train/: README.md  apptainer.def  autoencoder.yaml  config.yaml  freq-config.yaml  pyproject.toml  result.json  train.yaml
projects/train/configs/: autoencoder.yaml  bbh.yaml  bns-time-spectrogram.yaml  bns.yaml  bns_time_spectrogram.yaml  search_space.py  time_heterodyne.yaml  training_prior.yaml  tune.yaml
projects/train/tests/: test_augmentations.py  test_callbacks.py
projects/train/train/: Untitled-1.ipynb  augmentations.py  callbacks.py  cli.py  constraints.py  conversion.py  helm.py  metrics.py  prior.py  remote.py  waveform_sampler.py
(+441 files in other folders)
