[project]
name = "aframe"
version = "0.0.1"
description = "End-to-end aframe pipeline components"
authors = [
    { name = "Ethan Marx", email = "emarx@mit.edu" },
    { name = "William Benoit", email = "benoi090@umn.edu" },
    { name = "Alec Gunny", email = "alec.gunny@ligo.org" },
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "luigi~=3.0",
    "utils",
    "ml4gw-hermes>=0.2.0",
    "law>=0.1.19",
    "kr8s>=0.10.0,<0.11",
    "pykube-ng[oidc]>=23.6.0,<24",
    "spython>=0.2,<0.3",
    "boto3>=1.34.4,<2",
    "numpy>=1.26.4,<2",
    "cloudpathlib>=0.18.1,<0.19",
    "psutil>=5.9.8,<6",
]

[project.scripts]
build-containers = "scripts.build_containers:main"
aframe-init = "scripts.aframe_init:main"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "jsonargparse>=4.27.1,<5",
    "conda-lock>=2.5.1,<3",
    "pre-commit>=3.7.0,<4",
]
docs = [
    "Sphinx>5.0",
    "sphinx-rtd-theme>=2.0.0,<3",
    "myst-parser>=2.0.0,<3",
    "sphinx-autodoc-typehints>=2.0.0,<3",
    "linkify-it-py>=2.0.3,<3",
    "sphinx-tabs>=3.4.7,<4",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.uv.sources]
utils = { path = "./libs/utils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["aframe", "train", "utils", "online", "data", "infer", "plots", "export", "ledger", "p_astro", "priors"]
multi_line_output = 3
include_trailing_comma = true
