[project]
name = "aframe"
version = "0.0.1"
description = "End-to-end aframe pipeline components"
authors = [
    { name = "Ethan Marx", email = "emarx@mit.edu" },
    { name = "William Benoit", email = "benoi090@umn.edu" },
    { name = "Alec Gunny", email = "alec.gunny@ligo.org" },
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "luigi~=3.0",
    "utils",
    "ml4gw-hermes>=0.2.1",
    "law>=0.1.20",
    "kr8s>=0.10.0,<0.11",
    "pykube-ng[oidc]>=23.6.0,<24",
    "spython>=0.2,<0.3",
    "boto3>=1.34.4,<2",
    "numpy>=1.26.4,<2",
    "cloudpathlib>=0.18.1,<0.19",
    "psutil>=5.9.8,<6",
    "jsonargparse>=4.27.1,<5",
]

[project.scripts]
build-containers = "scripts.build_containers:main"
aframe-init = "scripts.aframe_init:main"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "conda-lock>=2.5.1,<3",
    "pre-commit>=3.7.0,<4",
]
docs = [
    "Sphinx>5.0",
    "sphinx-rtd-theme>=2.0.0,<3",
    "myst-parser>=2.0.0,<3",
    "sphinx-autodoc-typehints>=2.0.0,<3",
    "linkify-it-py>=2.0.3,<3",
    "sphinx-tabs>=3.4.7,<4",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.uv.sources]
utils = { path = "./libs/utils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
extend-exclude = ["docs"]

[tool.ruff.lint]
extend-safe-fixes = ["C408"]
mccabe = {"max-complexity" = 18}
select = ["B", "C", "E", "F", "W", "B9"]
# ignore W605 and E203 for consistency with black
# ignore F722 for compatibility with jaxtyping
ignore = ["W605", "E203", "F722"]

# ignore asterisk imports and unused
# import errors in __init__ files
per-file-ignores =  {"**/__init__.py" = ["F401", "F403"]}
