[tool.poetry]
name = "bbhnet.analysis"
version = "0.0.1"
description = "Tools for making detections from BBHNet outputs"
authors = ["Alec Gunny"]
license = "MIT"
packages = [
    {include = "bbhnet"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.7.3"
"bbhnet.io" = {path = "../io", develop = true}
astropy = "^5.2.1"
bilby = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
