[tool.poetry]
name = "aframe.analysis"
version = "0.0.1"
description = "Tools for making detections from aframe outputs"
authors = ["Alec Gunny"]
license = "MIT"
packages = [
    {include = "aframe"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.7.3"
astropy = "^5.2.1"
bilby = "^1.4.1"

"aframe.io" = {path = "../io", develop = true}
"aframe.priors" = {path = "../priors", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
