[tool.poetry]
name = "architectures"
version = "0.1.0"
description = "Aframe neural network architectures"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
einops = "^0.8"
ml4gw = "^0.6"
h5py = "^3.9.0"
numpy = "^1.26"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
