[project]
name = "architectures"
version = "0.1.0"
description = "Aframe neural network architectures"
authors = [{ name = "Ethan Jacob Marx", email = "ethan.marx@ligo.org" }]
requires-python = ">=3.9,<3.13"
license = "MIT"
dependencies = [
    "einops>=0.8,<0.9",
    "ml4gw>=0.7.2",
    "h5py>=3.9.0,<4",
    "numpy~=1.26",
]

[dependency-groups]
dev = ["pytest>=8.2.1,<9"]

[tool.uv]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
