[tool.poetry]
name = "bbhnet.base"
version = "0.0.1"
description = "Base environment for setting version constraints"
authors = ["Alec Gunny"]
license = "MIT"
packages = [
    {include = "bbhnet"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

# see https://github.com/python-poetry/poetry/issues/4264
packaging = "<21.0"

# gwpy contraints
scipy = {version = "<1.8", optional = true}
astropy = {version = "<5.0", optional = true}

# numpy constraint
numpy = {version = ">=1.22.0,<1.22.4", optional = true}

[tool.poetry.extras]
gwpy = ["scipy", "astropy"]
numpy = ["numpy"]

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
