[tool.poetry]
name = "aframe.deploy"
version = "0.0.1"
description = "Tools for deploying jobs on the LIGO data grid"
authors = ["Alec Gunny"]
license = "MIT"
packages = [
    {include = "aframe"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
