[tool.poetry]
name = "bbhnet.injection"
version = "0.0.1"
description = "Function for injecting BBH signals into input frames"
authors = ["Will Benoit <william.benoit@ligo.org>",]
license = "MIT"
packages = [
    {include = "bbhnet"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "<1.8"
bilby = "^1.1.5"
lalsuite = "^7.4"
astropy = "<5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
