[tool.poetry]
name = "bbhnet.io"
version = "0.0.1"
description = "Tools for standardizing reading and writing BBHNet files"
authors = ["Alec Gunny"]
license = "MIT"
packages = [
    {include = "bbhnet"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
h5py = "^3.6"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
