[tool.poetry]
name = "aframe.io"
version = "0.0.1"
description = "Tools for standardizing reading and writing aframe files"
authors = ["Alec Gunny"]
license = "MIT"
packages = [
    {include = "aframe"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
h5py = "^3.6"
numpy = ">=1.22.0,<1.22.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
