[tool.poetry]
name = "ledger"
version = "0.1.0"
description = "Objects for storing and manipulating aframe data"
authors = ["Ethan Marx <emarx@mit.edu>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
bilby = "^2.2.2"
h5py = "^3.10.0"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
