[project]
name = "ledger"
version = "0.1.0"
description = "Objects for storing and manipulating aframe data"
authors = [{ name = "Ethan Marx", email = "emarx@mit.edu" }]
requires-python = ">=3.9,<3.13"
license = "MIT"
dependencies = [
    "h5py>=3.10.0,<4",
    "numpy>=1.26.4,<2",
    "utils",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "pytest>=8.2.0,<9",
]

[tool.uv]

[tool.uv.sources]
utils = { path = "../utils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
