[tool.poetry]
name = "aframe.logging"
version = "0.0.1"
description = "aframe logging utilities"
authors = ["Alec Gunny"]
license = "MIT"
packages = [
    {include = "aframe"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
