[tool.poetry]
name = "p_astro"
version = "0.1.0"
description = "Functions for calculating p_astro of events"
authors = ["Will Benoit <benoi090@umn.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
astropy = ">=6.0"
numpy = "^1.26"

ledger = {path = "../ledger", develop = true}
utils = {path = "../utils", develop = true}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
