[project]
name = "p_astro"
version = "0.1.0"
description = "Functions for calculating p_astro of events"
authors = [{ name = "Will Benoit", email = "benoi090@umn.edu" }]
requires-python = ">=3.9,<3.13"
license = "MIT"
dependencies = [
    "astropy>=6.0",
    "numpy~=1.26",
    "ledger",
    "utils",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "pytest>=8.2.0,<9",
]

[tool.uv]

[tool.uv.sources]
ledger = { path = "../ledger", editable = true }
utils = { path = "../utils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
