[tool.poetry]
name = "bbhnet.parallelize"
version = "0.0.1"
description = "BBHNet multiprocessing utilities"
authors = ["Alec Gunny"]
license = "MIT"
packages = [
    {include = "bbhnet"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
