[tool.poetry]
name = "priors"
version = "0.1.0"
description = "Priors used for aframe analysis"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
astropy = "^5.0"
bilby = "^2.2.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
