[project]
name = "priors"
version = "0.1.0"
description = "Priors used for aframe analysis"
authors = [{ name = "Ethan Jacob Marx", email = "ethan.marx@ligo.org" }]
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "astropy>=5.0",
    "bilby>=2.2.2,<3",
    "numpy>=2",
    "utils",
]

[dependency-groups]
dev = ["pytest~=7.3"]

[tool.uv]

[tool.uv.sources]
utils = { path = "../utils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
