[tool.poetry]
name = "aframe.trainer"
version = "0.0.1"
description = "aframe training helper functions"
authors = ["Ethan Marx", "Alec Gunny"]
license = "MIT"
packages = [
    {include = "aframe"}
]
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = {version = "^1.12", source = "torch"}
"hermes.typeo" = "^0.1.5"

"aframe.architectures" = {path = "../architectures", develop = true}
"aframe.logging" = {path = "../logging", develop = true}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
