[tool.poetry]
name = "utils"
version = "0.1.0"
description = "General utility functions for Aframe"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
h5py = "^3.6"
numpy = "^1.26.4"
s3fs = "^2024"

# make preprocessing modules here for use in
# both validation and inference export
ml4gw = ">=0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
