[project]
name = "utils"
version = "0.1.0"
description = "General utility functions for Aframe"
authors = [{ name = "Ethan Jacob Marx", email = "ethan.marx@ligo.org" }]
requires-python = ">=3.9,<3.13"
license = "MIT"
dependencies = [
    "h5py~=3.6",
    "numpy>=1.26.4,<2",
    "s3fs>=2024,<2025",
    "ml4gw>=0.7.2",
]

[dependency-groups]
dev = ["pytest>=8.3.0,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
