[tool.poetry]
name = "data"
version = "0.0.1"
description = "aframe data generation scripts"
authors = ["Alec Gunny <alecg@mit.edu>", "Ethan Marx <emarx@mit.edu>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11" 

# local deps
utils = {path = "../../libs/utils", develop = true}
ledger = {path = "../../libs/ledger", develop = true}
priors = {path = "../../libs/priors", develop = true}
ml4gw = {path = "../../ml4gw", develop = true}
aframe = {path = "../..", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
