[project]
name = "data"
version = "0.0.1"
description = "aframe data generation scripts"
authors = [
    { name = "Alec Gunny", email = "alecg@mit.edu" },
    { name = "Ethan Marx", email = "emarx@mit.edu" },
]
requires-python = ">=3.9,<3.13"
license = "MIT"
dependencies = [
    "utils",
    "ledger",
    "priors",
    "ml4gw>=0.7.2",
    "aframe",
]

[dependency-groups]
dev = ["pytest>=8.2.1,<9"]

[tool.uv]

[tool.uv.sources]
utils = { path = "../../libs/utils", editable = true }
ledger = { path = "../../libs/ledger", editable = true }
priors = { path = "../../libs/priors", editable = true }
aframe = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
