[project]
name = "data"
version = "0.0.1"
description = "aframe data generation scripts"
authors = [
    { name = "Alec Gunny", email = "alecg@mit.edu" },
    { name = "Ethan Marx", email = "emarx@mit.edu" },
]
requires-python = ">=3.10,<3.13"
license = "MIT"
dependencies = [
    "utils",
    "ledger",
    "priors",
    "ml4gw>=0.7.2",
    "aframe",
    "gwpy>=3.0.8,<4",
    "gwosc",
    "lalsuite",
    "jsonargparse>=4.18.0",
    "ciecplib",
    "requests-gssapi",
    "python-ligo-lw>=1.8.3,<2",
]

[project.scripts]
fetch-data = "data.fetch.cli:main"
generate-segments = "data.segments.cli:main"
generate-training-waveforms = "data.waveforms.cli:training"
generate-testing-waveforms = "data.waveforms.cli:testing"
generate-validation-waveforms = "data.waveforms.cli:validation"

[dependency-groups]
dev = ["pytest>=8.2.1,<9"]

[tool.uv]

[tool.uv.sources]
utils = { path = "../../libs/utils", editable = true }
ledger = { path = "../../libs/ledger", editable = true }
priors = { path = "../../libs/priors", editable = true }
aframe = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
