[tool.poetry]
name = "export"
version = "0.1.0"
description = "Export aframe for IaaS inference"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.scripts]
export-model = "export.main:export"
export-and-launch-triton = "export.remote:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"


# nautilus/remote file access
# dependencies for s3 support. Should probably put these
# in their own group, but only including boto3 separately
# to restrict its version because the whl downloads during
# the solve were insanely slow
boto3 = "^1.30"
fsspec = {version = "^2023.10", extras=["s3"]}


# local deps
ml4gw-hermes = {path = "../../hermes", develop = true, extras = ["torch"]}
aframe = {path = "../../", develop = true}
ml4gw = {path = "../../ml4gw", develop = true}
utils = {path = "../../libs/utils", develop = true}
jsonargparse = "^4.27.1"

nvidia-cudnn-cu11 = "8.9.6.50"
tensorrt = "8.5.1.7"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
