[project]
name = "export"
version = "0.1.0"
description = "Export aframe for IaaS inference"
authors = [{ name = "Ethan Jacob Marx", email = "ethan.marx@ligo.org" }]
requires-python = ">=3.9,<3.13"
license = "MIT"
dependencies = [
    "ml4gw>=0.7.10",
    "boto3~=1.30",
    "fsspec[s3]>=2024,<2025",
    "ml4gw-hermes[torch]>=0.2.1",
    "aframe",
    "utils",
    "jsonargparse>=4.27.1,<5",
    "nvidia-cudnn-cu11==8.9.6.50",
    "tensorrt==8.5.2.2",
    "urllib3>=1.25.4,<1.27",
]

[project.scripts]
export = "export.cli:main"
export-model = "export.main:export"
export-and-launch-triton = "export.remote:main"

[dependency-groups]
dev = ["pytest>=8.3.0,<9"]

[tool.uv]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
aframe = { path = "../../", editable = true }
utils = { path = "../../libs/utils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
