[project]
name = "export"
version = "0.1.0"
description = "Export aframe for IaaS inference"
authors = [{ name = "Ethan Jacob Marx", email = "ethan.marx@ligo.org" }]
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "ml4gw>=0.7.7",
    "boto3~=1.30",
    "fsspec[s3]>=2024,<2025",
    "ml4gw-hermes[torch]",
    "aframe",
    "utils",
    "jsonargparse>=4.27.1,<5",
    "nvidia-cudnn-cu12",
    "tensorrt>=10.0",
    "urllib3>=2",
]

[project.scripts]
export = "export.cli:main"
export-model = "export.main:export"
export-and-launch-triton = "export.remote:main"

[dependency-groups]
dev = ["pytest>=8.3.0,<9"]

[tool.uv]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
aframe = { path = "../../", editable = true }
utils = { path = "../../libs/utils", editable = true }
# TODO: point at released version once available
ml4gw-hermes = { git = "https://github.com/ML4GW/hermes", branch = "dev" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
