[tool.poetry]
name = "generate_glitches"
version = "0.0.1"
description = "Generate a glitch dataset for training/validation"
authors = ["Ethan Marx <emarx@mit.edu>",]
license = "MIT"

[tool.typeo]
omicron_dir = "${OMICRON_DIR}"   
out_dir = "${OUT_DIR}"
snr_thresh = 8
window = 2
start = 1258848000 
stop = 1259048000 
channel = "DCS-CALIB_STRAIN_CLEAN_C01"
frame_type = "HOFT_C01"


[tool.poetry.dependencies]
python = ">3.8,<3.11"
"hermes.typeo" = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
generate-glitches = "generate_glitches:main"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
