[tool.poetry]
name = "generate_waveforms"
version = "0.0.1"
description = "Simulate BBH a waveform dataset for training/validation"
authors = ["Will Benoit <william.benoit@ligo.org>",]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.0"
bilby = "^1.1.5"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
