[tool.poetry]
name = "infer"
version = "0.0.1"
description = ""
authors = ["Alec Gunny", "Ethan Marx", "Will Benoit"]

[tool.poetry.scripts]
infer = "infer.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ratelimiter = "^1.2"
ray = "^2.6"
jsonargparse = "^4.24"
tqdm = "^4.66"

# submodules
ml4gw-hermes = {path = "../../hermes", develop = true, extras = ["serve", "torch"]}
pycondor = {path = "../../pycondor", develop = true}

# local deps
aframe = {path = "../../", develop = true}
utils = {path = "../../libs/utils", develop = true}
ledger = {path = "../../libs/ledger", develop = true}


# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.3"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
