[project]
name = "infer"
version = "0.0.1"
description = ""
authors = [
    { name = "Alec Gunny" },
    { name = "Ethan Marx" },
    { name = "Will Benoit" },
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "ratelimiter~=1.2",
    "jsonargparse~=4.24",
    "tqdm~=4.66",
    "ml4gw-hermes[torch]>=0.2.1",
    "aframe",
    "utils",
    "ledger",
    "urllib3>=1.25.4,<1.27",
]

[project.scripts]
infer = "infer.cli:main"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "pytest~=7.3",
]

[tool.uv]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
aframe = { path = "../../", editable = true }
utils = { path = "../../libs/utils", editable = true }
ledger = { path = "../../libs/ledger", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
