[project]
name = "infer"
version = "0.0.1"
description = ""
authors = [
    { name = "Alec Gunny" },
    { name = "Ethan Marx" },
    { name = "Will Benoit" },
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "ratelimiter~=1.2",
    "jsonargparse~=4.24",
    "tqdm~=4.66",
    "ml4gw-hermes[torch]",
    "aframe",
    "utils",
    "ledger",
    "urllib3>=2",
]

[project.scripts]
infer = "infer.cli:main"

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "pytest>=8,<9",
]

[tool.uv]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
aframe = { path = "../../", editable = true }
utils = { path = "../../libs/utils", editable = true }
ledger = { path = "../../libs/ledger", editable = true }
# TODO: point at released version once available
ml4gw-hermes = { git = "https://github.com/ML4GW/hermes", branch = "dev" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
