[tool.poetry]
name = "analyze_o2"
version = "0.0.1"
description = "Analyzing BBHNet outputs"
authors = ["Alec Gunny"]
license = "MIT"
# readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
scipy = "^1.7.3"
bokeh = "^2.4.2"
rich = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
