[tool.poetry]
name = "analyze_o2"
version = "0.0.1"
description = "Analyzing BBHNet outputs"
authors = ["Alec Gunny"]
license = "MIT"
# readme = "README.md"

[tool.poetry.scripts]
analyze-o2 = "analyze_o2:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4"
rich = "^12.0"
"hermes.typeo" = "^0.1.4"

"bbhnet.analysis" = {path = "../../libs/analysis", develop = true}
"bbhnet.io" = {path = "../../libs/io", develop = true}
"bbhnet.logging" = {path = "../../libs/logging", develop = true}
"bbhnet.parallelize" = {path = "../../libs/parallelize", develop = true}

# extras required for running the notebook
jupyter = {version = "^1.0.0", optional = true}
bokeh = {version = "^2.4.2", optional = true}

[tool.poetry.extras]
notebook = ["jupyter", "bokeh"]

[tool.typeo]
data_dir = "${DATA_DIR}"
write_dir = "${WRITE_DIR}"
results_dir = "${RESULTS_DIR}"
window_length = 1
norm_seconds = [10, 100, 1000]
max_tb = 31536000 # aka 1yr
num_bins = 10000
log_file = "analysis.log"
verbose = true
force = false

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
