[tool.poetry]
name = "online"
version = "0.0.1"
description = "Deploy aframe models over live data"
authors = ["Will Benoit <benoi090@umn.edu>", "Alec Gunny <alecg@mit.edu>", "Ethan Marx <emarx@mit.edu>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13" 

# local deps
utils = {path = "../../libs/utils", develop = true}
ledger = {path = "../../libs/ledger", develop = true}
p_astro = {path = "../../libs/p_astro", develop = true}
architectures = {path = "../../libs/architectures", develop = true}

arrakis = {git = "https://git.ligo.org/ngdd/arrakis-python.git"}

amplfi = {git = "https://github.com/ML4GW/amplfi.git"}
ml4gw = "^0.7"
omegaconf = "^2.3.0"
numpy = "<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.scripts]
online = "online.cli:cli" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
