[project]
name = "online"
version = "0.0.1"
description = "Deploy aframe models over live data"
authors = [
    { name = "Will Benoit", email = "benoi090@umn.edu" },
    { name = "Alec Gunny", email = "alecg@mit.edu" },
    { name = "Ethan Marx", email = "emarx@mit.edu" },
]
requires-python = ">=3.10,<3.13"
license = "MIT"
dependencies = [
    "utils",
    "ledger",
    "p_astro",
    "architectures",
    "arrakis>=0.2.0,<0.3",
    "amplfi>=0.5.0",
    "ml4gw>=0.7.4",
    "omegaconf>=2.3.0,<3",
    "numpy<2.0.0",
    "scipy<1.15",
    "matplotlib==3.9.4",
    "ligo-skymap>=2.2.2,<3",
    "ligo-gracedb>=2.14.1",
]

[project.scripts]
online = "online.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.2.1,<9",
    "jupyter>=1.0.0,<2",
]

[tool.uv]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
utils = { path = "../../libs/utils", editable = true }
ledger = { path = "../../libs/ledger", editable = true }
p_astro = { path = "../../libs/p_astro", editable = true }
architectures = { path = "../../libs/architectures", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
